--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" />
+    <title>Vite-Vue-Admin</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <img id="loadindImg" style="margin: auto;display: block;margin-top: 180px;width: 200px;" src="/logo.png" alt="">
+			<p id="loadingText" style="text-align: center;font-weight: bold;font-size: 30px;font-family: '微软雅黑';color: #AD49FF;">Vite-Vue-Admin</p>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<script type="text/javascript">
+	if (localStorage.getItem("themeColors")) {
+		document.getElementById('loadingText').style.color = localStorage.getItem("themeColors").split(`"`)[3]
+	}
+</script>
