feat: 添加app启动动画

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <img id="loadindImg" style="margin: auto;display: block;margin-top: 180px;width: 200px;" src="/logo.png" alt="">
 			<p id="loadingText" style="text-align: center;font-weight: bold;font-size: 30px;font-family: '微软雅黑';color: #AD49FF;">Vite-TSX-Vue-Admin</p>
     </div>
+    <script async src="https://cdn.jsdelivr.net/npm/tinymce-all-in-one@4.9.3/tinymce.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
